--- a/Smack/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Smack/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -478,6 +478,7 @@
                         <outlet property="userImage" destination="O8D-zO-XFJ" id="i3E-ui-1Jg"/>
                         <outlet property="userNameText" destination="iAe-C2-rWI" id="Vwd-4w-ogx"/>
                         <segue destination="qOg-bq-WZe" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="t6X-V8-BS9"/>
+                        <segue destination="5qp-Cv-wti" kind="show" identifier="toAvatarPicker" id="Bro-OX-gbX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LIS-d6-XEq" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -485,12 +486,103 @@
             </objects>
             <point key="canvasLocation" x="2408.8000000000002" y="-244.22788605697153"/>
         </scene>
+        <!--Avatar PickerVC-->
+        <scene sceneID="bbC-9g-E7g">
+            <objects>
+                <viewController id="5qp-Cv-wti" customClass="AvatarPickerVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Gt9-56-Yza">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SiJ-3F-XEh">
+                                <rect key="frame" x="16" y="28" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="4Aq-gm-fdb"/>
+                                    <constraint firstAttribute="height" constant="30" id="bsW-51-jpO"/>
+                                </constraints>
+                                <state key="normal" image="smackBack"/>
+                                <connections>
+                                    <action selector="backPressed:" destination="5qp-Cv-wti" eventType="touchUpInside" id="pnD-hh-V7J"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="JDw-oj-uvS">
+                                <rect key="frame" x="107.5" y="28" width="160" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="S7h-EN-tnA"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Dark"/>
+                                    <segment title="Light"/>
+                                </segments>
+                                <color key="tintColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="segmentControlChanged:" destination="5qp-Cv-wti" eventType="valueChanged" id="9N5-MP-jzi"/>
+                                </connections>
+                            </segmentedControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rCe-8n-9zF">
+                                <rect key="frame" x="0.0" y="78" width="375" height="589"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bEB-Hb-EdR">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="avatarCell" id="o5Z-gk-Xu3" customClass="AvatarCell" customModule="Smack" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="z48-J4-kYw">
+                                                    <rect key="frame" x="10" y="10" width="80" height="80"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="z48-J4-kYw" firstAttribute="top" secondItem="o5Z-gk-Xu3" secondAttribute="top" constant="10" id="4SG-Ck-k28"/>
+                                            <constraint firstAttribute="bottom" secondItem="z48-J4-kYw" secondAttribute="bottom" constant="10" id="MAo-7e-SDd"/>
+                                            <constraint firstAttribute="trailing" secondItem="z48-J4-kYw" secondAttribute="trailing" constant="10" id="MjN-bM-gFk"/>
+                                            <constraint firstItem="z48-J4-kYw" firstAttribute="leading" secondItem="o5Z-gk-Xu3" secondAttribute="leading" constant="10" id="zzM-zk-haT"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="avatarImage" destination="z48-J4-kYw" id="gPg-Bi-PNF"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rCe-8n-9zF" firstAttribute="leading" secondItem="hWj-Yi-o0N" secondAttribute="leading" id="6R2-tF-a68"/>
+                            <constraint firstItem="hWj-Yi-o0N" firstAttribute="trailing" secondItem="rCe-8n-9zF" secondAttribute="trailing" id="IJK-nK-Q8F"/>
+                            <constraint firstItem="hWj-Yi-o0N" firstAttribute="bottom" secondItem="rCe-8n-9zF" secondAttribute="bottom" id="Lmy-RX-bam"/>
+                            <constraint firstItem="rCe-8n-9zF" firstAttribute="top" secondItem="SiJ-3F-XEh" secondAttribute="bottom" constant="20" id="SvW-tu-jwe"/>
+                            <constraint firstItem="JDw-oj-uvS" firstAttribute="top" secondItem="hWj-Yi-o0N" secondAttribute="top" constant="8" id="WdR-W7-0VQ"/>
+                            <constraint firstItem="JDw-oj-uvS" firstAttribute="centerX" secondItem="Gt9-56-Yza" secondAttribute="centerX" id="ho7-jH-FM4"/>
+                            <constraint firstItem="SiJ-3F-XEh" firstAttribute="top" secondItem="hWj-Yi-o0N" secondAttribute="top" constant="8" id="mKJ-ZX-cOh"/>
+                            <constraint firstItem="SiJ-3F-XEh" firstAttribute="leading" secondItem="hWj-Yi-o0N" secondAttribute="leading" constant="16" id="psy-G3-l7r"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="hWj-Yi-o0N"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="rCe-8n-9zF" id="4RJ-K1-cCd"/>
+                        <outlet property="segmentControl" destination="JDw-oj-uvS" id="dvX-JK-sCx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ahx-e2-vPJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3168.8000000000002" y="-242.42878560719643"/>
+        </scene>
     </scenes>
     <resources>
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
         <image name="profileDefault" width="192" height="192"/>
+        <image name="smackBack" width="28" height="28"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
