--- a/Smack/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Smack/Base.lproj/Main.storyboard
@@ -124,7 +124,7 @@
                                     <action selector="loginButtonPressed:" destination="umt-gG-8KV" eventType="touchUpInside" id="bTL-ch-n7S"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Vsv-3Q-mKs">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Vsv-3Q-mKs" customClass="CircleImage" customModule="Smack" customModuleProvider="target">
                                 <rect key="frame" x="16" y="572" width="75" height="75"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="75" id="9nd-ba-cmo"/>
@@ -428,7 +428,7 @@
                                     <action selector="createAccountPressed:" destination="vwl-CC-fFo" eventType="touchUpInside" id="7dY-ov-fnR"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="O8D-zO-XFJ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="O8D-zO-XFJ" customClass="CircleImage" customModule="Smack" customModuleProvider="target">
                                 <rect key="frame" x="137.5" y="324" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="JpA-rs-sCD"/>
@@ -450,12 +450,17 @@
                                     <action selector="pickBackgroundColorPressed:" destination="vwl-CC-fFo" eventType="touchUpInside" id="ueJ-GO-Pov"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="WY9-HU-Olf">
+                                <rect key="frame" x="169" y="215" width="37" height="37"/>
+                                <color key="color" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="4ra-tT-u0j" firstAttribute="width" secondItem="O8D-zO-XFJ" secondAttribute="width" id="4Hh-cS-HFi"/>
                             <constraint firstItem="O8D-zO-XFJ" firstAttribute="top" secondItem="UBs-M3-1be" secondAttribute="bottom" constant="40" id="8sj-oC-iCn"/>
                             <constraint firstItem="4ra-tT-u0j" firstAttribute="top" secondItem="O8D-zO-XFJ" secondAttribute="top" id="E1v-8e-6WT"/>
+                            <constraint firstItem="WY9-HU-Olf" firstAttribute="centerY" secondItem="eKY-aT-FOk" secondAttribute="centerY" constant="-100" id="Ec7-Tv-Oy8"/>
                             <constraint firstItem="O8D-zO-XFJ" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="H13-nl-WAQ"/>
                             <constraint firstItem="8DT-FX-iFK" firstAttribute="bottom" secondItem="P2K-BE-y1v" secondAttribute="bottom" constant="20" id="IiB-gq-Ow4"/>
                             <constraint firstItem="QW5-4h-gMO" firstAttribute="top" secondItem="4ra-tT-u0j" secondAttribute="bottom" constant="4" id="RU6-ha-P4L"/>
@@ -465,6 +470,7 @@
                             <constraint firstItem="sfw-Il-7as" firstAttribute="top" secondItem="8DT-FX-iFK" secondAttribute="top" constant="40" id="cn7-66-g3U"/>
                             <constraint firstItem="sfw-Il-7as" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="djn-f9-z53"/>
                             <constraint firstItem="QW5-4h-gMO" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="fCP-bL-pMp"/>
+                            <constraint firstItem="WY9-HU-Olf" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="mWc-MB-sAw"/>
                             <constraint firstItem="O8D-zO-XFJ" firstAttribute="top" secondItem="UBs-M3-1be" secondAttribute="bottom" constant="40" id="mZ4-8Z-3w8"/>
                             <constraint firstItem="UBs-M3-1be" firstAttribute="top" secondItem="sfw-Il-7as" secondAttribute="bottom" constant="40" id="mvW-XL-kSi"/>
                             <constraint firstItem="P2K-BE-y1v" firstAttribute="centerX" secondItem="eKY-aT-FOk" secondAttribute="centerX" id="pje-Gs-XsG"/>
@@ -475,6 +481,7 @@
                     <connections>
                         <outlet property="emailText" destination="71W-h2-R5g" id="SqA-c8-FxC"/>
                         <outlet property="passwordText" destination="bcH-yK-Gix" id="EUn-qp-GYJ"/>
+                        <outlet property="spinner" destination="WY9-HU-Olf" id="F7K-OG-0IK"/>
                         <outlet property="userImage" destination="O8D-zO-XFJ" id="i3E-ui-1Jg"/>
                         <outlet property="userNameText" destination="iAe-C2-rWI" id="Vwd-4w-ogx"/>
                         <segue destination="qOg-bq-WZe" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="t6X-V8-BS9"/>
